crates/solidity-v2/testing/snapshots/cst_output/from_v1/StructDefinition/member_function_pointer/generated/0.8.30-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected ByteKeyword_Reserved. One of AddressKeyword_Reserved, AtKeyword_Unreserved, BoolKeyword_Reserved, BytesKeyword_Reserved, CloseParen, ErrorKeyword_Unreserved, FixedKeyword_Reserved, FromKeyword_Unreserved, FunctionKeyword_Reserved, GlobalKeyword_Unreserved, Identifier, IntKeyword_Reserved, LayoutKeyword_Unreserved, MappingKeyword_Reserved, RevertKeyword_Unreserved, StringKeyword_Reserved, TransientKeyword_Unreserved, UfixedKeyword_Reserved, UintKeyword_Reserved was expected
   ╭─[crates/solidity-v2/testing/snapshots/cst_output/from_v1/StructDefinition/member_function_pointer/input.sol:4:13]
   │
 4 │   function (byte) internal pure returns (uint) func;
   │             ──┬─  
   │               ╰─── Error occurred here.
───╯
